Fixed issue causing sections to wrap onto next line

--- a/_sass/_section.scss
+++ b/_sass/_section.scss
@@ -1,3 +1,8 @@
+.main {
+	font-size:0;
+	overflow:hidden;
+	width:100%;
+}
 .section {
   background: $bg-color-primary;
   display: inline-block;
